<resources>
    <string name="app_name">Ticket Movie Booking NLU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_firebase_storage">gs://ticket-movie-booking-nlu-2196d.appspot.com/</string>

    <!---->
    <string name="default_web_client_id">174583519442-gdc1obloscbduiojb82m2ctaacnp3mp1.apps.googleusercontent.com</string>

    <!--Greeting activity string-->
    <string name="do_not_connect_to_network">Không có kết nối internet!</string>
    <string name="request_connect_to_network">Vui lòng kết nối internet!</string>
    <string name="re_try_check_password">Kết nối lại</string>
    <string name="exit">Thoát</string>
    <string name="cancel">Hủy</string>

    <!--Sign activity string-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="sign_up">Đăng kí</string>
    <string name="sign_up_now">Đăng kí ngay</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_in_now">Đăng nhập ngay</string>
    <string name="do_not_have_any_account">Bạn chưa có tài khoản?</string>
    <string name="have_account">Bạn đã có tài khoản?</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="request_email">Vui lòng nhập Email của bạn!</string>
    <string name="error_validate_email">Email không hợp lệ!</string>
    <string name="request_password">Vui lòng nhập mật khẩu của bạn!</string>
    <string name="request_re_password">Vui lòng nhập lại mật khẩu của bạn!</string>
    <string name="request_verify_account">Vui lòng kiểm tra email và xác thực tài khoản!</string>
    <string name="verify_is_account">Tài khoản đã được xác nhận!</string>
    <string name="sign_in_success">Đăng nhập thành công!</string>
    <string name="sign_up_success">Đăng ký thành công!</string>
    <string name="sign_in_fail">Sai email hoặc mật khẩu!</string>
    <string name="email_is_exist">Email đã được đăng ký!</string>
    <string name="not_match_password">Mật khẩu không trùng nhau!</string>
    <string name="send_mail_verify_fail">Gửi mail xác nhận thất bại. Vui lòng nhấn gửi lại!</string>
    <string name="login_with_password">Đăng nhập bằng mật khẩu</string>

    <!--profile fragment string-->
    <string name="sign_out">Đăng xuất</string>
    <string name="information">Giới thiệu</string>
    <string name="setting">Cài đặt</string>
    <string name="change_password_user">Đổi mật khẩu</string>
    <string name="input_old_password">Nhập mật khẩu cũ!</string>
    <string name="input_new_password">Nhập mật khẩu mới!</string>
    <string name="input_re_new_password">Nhập lại mật khẩu mới!</string>
    <string name="submit">Xác nhập</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="change_password_success">Đổi mật khẩu thành công!</string>
    <string name="change_password_fail">Đổi mật khẩu không thành công!</string>
    <string name="email_not_register">Email chưa được đăng ký. Vui lòng đăng ký</string>
    <string name="success">Thành công!</string>
    <string name="failed">Thất bại!</string>
    <string name="loading">Đang tải...</string>
    <string name="MAPS_API_KEY">AIzaSyAkJ-NbtMqrX05P5LzHQr86aAZeJ6iEmuA</string>

    <!--Google Map API-->

    <!--User Info-->
    <string name="User_Info">Thông tin người dùng</string>
    <string name="full_name">Họ và tên</string>
    <string name="user_email">Email</string>
    <string name="user_phone_number">Số điện thoại</string>
    <string name="user_birth_day">Ngày sinh</string>
    <string name="user_address">Địa chỉ</string>
    <string name="change_avatar">Đổi ảnh đại diện</string>

    <!--favoriteList-->
    <string name="favorite_list">Favorite List</string>


    <string name="expanded_text">Xem thêm</string>
    <string name="collapsed_text">Thu gọn</string>

    <!--Payment activity-->
    <string name="title_payment">THÔNG TIN THANH TOÁN</string>
    <string name="title_category">Thể loại:</string>
    <string name="pay">Thanh toán</string>
    <string name="total_pay">Tổng tiền:</string>
    <string name="single_chair">Ghế đơn: </string>
    <string name="couple_chair">Ghế đôi: </string>
    <string name="vip_chair">Ghế đôi: </string>
    <string name="room_show">Phòng chiếu:</string>
    <string name="payment_cinema">Rạp:</string>
    <string name="payment_email">Email:</string>
    <string name="payment_phone_number">Số điện thoại:</string>
    <string name="payment_name">Họ và tên:</string>
    <string name="info_payment">Thông tin đặt vé</string>
    <string name="choose_seat">Chọn chổ ngồi</string>
    <string name="find_way">Tìm đường</string>
    <string name="review_film">Đánh giá phim</string>
    <string name="date_start">Ngày khởi chiếu</string>
    <string name="film_duration">Thời lượng phim</string>
    <string name="film_detail">Thông tin chi tiết phim</string>
    <string name="booking">Đặt vé</string>
    <string name="total_price">Tổng giá:</string>
    <string name="selected_chair">Ghế đã chọn:</string>
    <string name="total_chair">Tổng ghế:</string>

    <string name="time">Thời gian</string>
    <string name="back_to_home">Về trang chủ</string>
    <string name="pay_success">THANH TOÁN THÀNH CÔNG</string>
    <string name="code_pay">Mã thanh toán</string>

    <string name="avail_ticket">avail</string>
    <string name="info_ticket">Thông tin vé</string>

    <!--    Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_day">Ngày</string>
    <string name="dashboard_week">Tuần</string>
    <string name="dashboard_month">Tháng</string>
    <string name="dashboard_num_of_ticket_sale">Số lượng vé bán ra</string>
    <string name="dashboard_revenu_report">Báo cáo doanh thu</string>
    <string name="dashboard_full_room">Lấp đầy phòng</string>
    <string name="dashboard_fully">Lấp</string>
    <string name="dashboard_empty">Trống</string>
    <string name="dashboard_sum_revenu">Tổng doanh thu</string>
    <string name="dashboard_sum_num_of_ticket_sale">Tổng số lượng vé bán ra</string>
    <string-array name="spinner_items_name_cinema">
        <item>CINESTAR</item>
        <item>GIGALMALL</item>
        <item>COOP.MART</item>
        <item>GALAXY</item>
    </string-array>


    <string name="price_manage">Quản lý giá vé</string>
    <string name="showtime">Thông tin xuất chiếu</string>
    <string name="hint_full_name">Họ và tên</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="next">Tiếp theo</string>
    <string name="phone_empty">Số điện thoại không được bỏ trống!</string>
    <string name="full_name_empty">Họ và tên không được bỏ trống!</string>
    <string name="single_chair_price">Ghế đơn</string>
    <string name="couple_chair_price">Ghế đôi</string>
    <string name="VIP_chair_price">Ghế VIP</string>
    <string name="currency">VNĐ</string>
    <string name="save">Lưu</string>
    <string name="server_client_id">953041789072-to27lbi7dp6jghfctkl4o1bv63u13kfp.apps.googleusercontent.com</string>
    <string name="other_login">Đăng nhập bằng phương thức khác</string>
    <string name="error_server">Lỗi server không phản hồi!</string>
    <string name="no_movie_showtime">Không có lịch chiếu!</string>
    <string name="no_ticket">Không có vé nào!</string>
    <string name="user_mode">User mode</string>
    <string name="admin_mode">Admin mode</string>
    <string name="user_manage">Quản lý tài khoản</string>
    <string name="user_role">Quyền</string>
    <string name="user_lock">Khóa</string>
    <string name="id">ID</string>
    <string name="movie_name">Tên phim</string>
    <string name="genre">Thể loại</string>
    <string name="vote">SL đánh giá</string>
    <string name="movie_rate">Số sao</string>
    <string name="movie_manage">Quản lý phim</string>
    <string name="director">Đạo diển</string>
    <string name="actor">Diễn viên</string>
</resources>