<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="50dp"
    tools:context=".view.fragments.ForgetPasswordFragment">

    <EditText
        android:id="@+id/edit_text_forget_password_email"
        style="@style/edt_input_info_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <android.widget.Button
        android:id="@+id/button_forget_password"
        style="@style/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/notify_other_option_sign"
            android:text="@string/login_with_password" />

        <TextView
            android:id="@+id/text_view_change_fragment_sign_in_form_fragment_forget_password"
            style="@style/change_page_sign"
            android:text="@string/sign_in_now" />
    </LinearLayout>

</LinearLayout>