<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Thay đổi mật khẩu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_new_password"
        style="@style/edt_input_info_sign"
        android:hint="@string/input_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_text_re_new_password"
        style="@style/edt_input_info_sign"
        android:hint="@string/input_re_new_password"
        android:inputType="textPassword" />

    <android.widget.Button
        android:id="@+id/button_submit_change_pasword"
        style="@style/btn_sign"
        android:layout_marginBottom="20dp"
        android:text="@string/submit" />
</LinearLayout>