<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".view.activities.PaymentSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ADAS"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_payment_success"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/pay_success"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    style="@style/column_info_payment"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/text_view_time_pay"
                    style="@style/column_info_payment"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/column_info_payment"
                    android:text="@string/code_pay" />

                <TextView
                    android:id="@+id/text_view_code_pay"
                    style="@style/column_info_payment"
                    android:textAlignment="textEnd" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ADAS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.widget.Button
            android:id="@+id/button_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:background="@drawable/bg_button_sign"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/back_to_home"
            android:textSize="20sp" />
    </FrameLayout>
</RelativeLayout>